        The default settings are now:
          Nauvis = 0%
          Vulcanus = 5%
          Fulgora = 10%
          Gleba = 15%
          Aquilo = 20%
  Changes:
    - The quest "Check This Out!" now requires an additional condition, requiring you to use the button that sets filters of a hex core's unloaders.
  Bugfixes:
    - Fixed that dungeons invisibly occupied some hexes just outside of themselves, preventing you from claiming them.
    - Fixed that hex cores did not correctly show whether the hexports were currently enabled.
    - Fixed crash on running the command /hextorio-debug when in remote view.
    - Fixed that updating the mod settings for planet-based trade productivity bonuses would not take effect without a restart.
  Gui:
    - Trade arrows display nonzero productivity without mousing over them.
    - Softened the white and cyan trade arrow sprites.
    - Removed the boxes around each trade, de-cluttering the hex core GUI and trade overview.
    - Moved the trade arrow's tooltip to a more obvious location that's below the trade, having the sprite of a productivity module.
    - Added button for pinging trades.
  Optimizations:
    - Optimized dungeon turret reloading.
  Translation:
    - Added Polish translations.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 21/11/25
  Major Features:
    - Added item buffs to most items, unlocked and upgraded in the Catalog.
        Unlocking and enhancement difficulty is configurable with two new settings, "Item Buff Cost Scale" and "Item Buff Cost Base".
    - Added command /set-item-value so that you can get modded items to show up in random trades, the catalog, and be able to use them in /add-trade.
        Also added complementary commands: /import-item-values /export-item-values /remove-item-value /get-item-value
    - Added Fulgora quest to unlock free roboports ("Hexports") built into hex cores that require no power.