@@ -1296,7 +1296,7 @@ function gui.update_hex_core(player)
         show_quality_bounds = show_quality_bounds,
         quality_to_show = quality_name,
         show_productivity_info = true,
-        expanded = true,
+        expanded = quests.is_feature_unlocked "trade-configuration",
     })
 
     gui.update_hex_core_resources(player)
