@@ -643,6 +643,7 @@ dungeon-location=Dungeons are located far from spawn.
 dungeon-loot-condition=Pick up all chests in a dungeon to loot it.
 first-spidertron=Work from home!
 no-robot-slots=Hexports have no slots for robots.
+trades-require-claim=Trades only work when the hex is claimed.
 
 [quest-title]
 ground-zero=[img=virtual-signal.shape-circle] Ground Zero
@@ -773,6 +774,7 @@ the-factory-must-grow=The sentient spider will help you. Oh, you're going to use
 [quest-condition-name]
 claimed-hexes=Claim Hexes
 claimed-hexes-on=Claim Hexes
+make-trades=Make Trades
 biter-ramming=BITER RAMMING
 trades-found=Trades Found
 hex-span=Hex Span
@@ -801,6 +803,7 @@ create-trade-map-tag=Create Map Tag
 [quest-condition-description]
 claimed-hexes=Claim a total of [font=__3__][color=__2__]__1__[.color][.font] hexes.
 claimed-hexes-on=Claim a total of [font=__4__][color=__3__]__1__[.color][.font] hexes on [planet=__2__].
+make-trades=Make [font=__3__][color=__2__]__1__[.color][.font] __plural_for_parameter__1__{1=trade|rest=trades}__.
 biter-ramming=Destroy a [img=entity.biter-spawner] or [img=entity.spitter-spawner] by ramming it with a [img=item.car] or [img=item.tank].
 trades-found=Find [font=__3__][color=__2__]__1__[.color][.font] trades.
 hex-span=Claim hexes such that the longest distance between any two hexes is at least [font=__3__][color=__2__]__1__[.color][.font] hex tiles.
@@ -844,6 +847,7 @@ all-trades-productivity=All trades gain [font=__2__][color=__1__]__3__%[.color][
 
 [feature-name]
 catalog=The Catalog
+trade-configuration=Trade Configuration
 trade-overview=The Trade Overview
 quantum-bazaar=The Quantum Bazaar
 teleportation=Teleportation
@@ -858,6 +862,7 @@ hexports=Hexports
 
 [feature-description]
 catalog=Discover items, rank them up, and receive valuable bonuses!
+trade-configuration=Adds buttons under trades for QoL features.
 trade-overview=Quickly locate any trade you've found!
 quantum-bazaar=Take trading to a whole new level.
 teleportation=You can now teleport to hex cores on the same planet as you!
